fix: better announcement spacing

--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,20 @@ button:hover {
     align-items: stretch;
     background-color: peachpuff;
     padding-left: 0px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.announcement-container li {
+    margin: 0.5rem 1.5rem;
+}
+
+.announcement-card {
+    font-weight: bold;
+}
+
+.announcement-card p {
+    font-weight: normal;
 }
 
 .divider {
